Align elements fix

--- a/sass/blocks/news.scss
+++ b/sass/blocks/news.scss
@@ -35,8 +35,8 @@
   }
 
   &__item {
-    width: 100%;
     padding-bottom: 20px;
+    padding-left: 70px;
     margin-bottom: 20px;
     border-bottom: 1px solid #e5ddd5;
 
@@ -49,9 +49,8 @@
     position: relative;
     display: block;
     min-height: 70px;
-    padding-left: 70px;
-    padding-right: 20px;
     color: black;
+    text-align: left;
     text-decoration: none;
 
     &:hover .news__date {
@@ -87,13 +86,14 @@
   &__date {
     box-sizing: border-box;
     position: absolute;
-    top: 10px;
-    left: 0;
+    top: 12px;
+    right: 100%;
     display: block;
     width: 50px;
     height: 50px;
     padding: 5px 12px 0;
     background-color: black;
+    transform: translateX(-20px);
     font-size: 16px;
     line-height: 16px;
     line-height: 16px;
