--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -25,6 +25,7 @@
   }
 
   &__item {
+    @include mp-clear;
     position: relative;
     margin-bottom: 25px;
 
